# virtual-camera

./: .gitignore  .gitmodules  CMakeLists.txt  CVirtualCamera.cpp  CVirtualCamera.h  CVirtualCamera2.cpp  CVirtualCamera2.h  CVirtualCameraPin.cpp  CVirtualCameraPin.h  DllMain.cpp  DllMain2.cpp  README.md  VirtualCamera.def
baseclasses/: perflog.cpp  streams.h
